[marquee] Webkit scrollbar fix

--- a/app/module/component/marquee/styles/marquee.styl
+++ b/app/module/component/marquee/styles/marquee.styl
@@ -19,17 +19,20 @@
 	height: 100%
 	background-color: #fff
 	transition: left 0.4s ease-in-out
+	overflow: hidden
 	z-index: 2
 	$hardwareAccel()
 	&.active
 		left: 75%
 .marquee-viewport
 	position: relative
-	padding-right: 2%
-	width: 106%
+	width: 100%
 	height: 100%
 	overflow-y: auto
+	&::-webkit-scrollbar
+		display: none
 .marquee-wrapper
 	width: 100%
 	min-height: 100%
 	background-color: #000
+	box-sizing: content-box
